policies/kubernetes-actions-exec-into-pod-2.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kubernetes-actions-exec-into-pod-2
spec:
  policyName: 'Kubernetes Actions: Exec into Pod 2'
  description: Alerts when Kubernetes API receives request to execute command in container
  rationale: '''pods/exec'' is non-standard approach for interacting with containers. Attackers with permissions could execute malicious code and compromise resources within a cluster'
  remediation: Restrict RBAC access to the 'pods/exec' resource according to the Principle of Least Privilege. Limit such usage only to development, testing or debugging (non-production) activities
  disabled: false
  categories:
    - Kubernetes Events
  lifecycleStages:
    - RUNTIME
  eventSource: DEPLOYMENT_EVENT
  exclusions:
    - deployment:
        name: thanos-querier
        scope:
          namespace: openshift-monitoring
    - deployment:
        name: prometheus-k8s
        scope:
          namespace: openshift-monitoring
    - deployment:
        name: ovnkube-node
        scope:
          namespace: openshift-ovn-kubernetes
    - deployment:
        name: etcd-ci-ln-.*-master-\d+
        scope:
          namespace: openshift-etcd
  severity: HIGH_SEVERITY
  policySections:
    - policyGroups:
        - fieldName: Kubernetes Resource
          booleanOperator: OR
          values:
            - value: PODS_EXEC
  mitreAttackVectors:
    - tactic: TA0002
      techniques:
        - T1609
    - tactic: TA0002
      techniques:
        - T1059.004
  criteriaLocked: false
  mitreVectorsLocked: false
  isDefault: false
