policies/netcat-in-image-pac.yaml
kind: SecurityPolicy
apiVersion: config.stackrox.io/v1alpha1
metadata:
  name: netcat-in-image-pac
spec:
  policyName: Netcat in Image (PaC)
  categories:
  - Package Management
  description: 'This policy checks for container images containing netcat'
  enforcementActions:
    - SCALE_TO_ZERO_ENFORCEMENT
    - FAIL_BUILD_ENFORCEMENT
    - FAIL_DEPLOYMENT_CREATE_ENFORCEMENT
    - FAIL_DEPLOYMENT_UPDATE_ENFORCEMENT
  remediation: Use the base image package manager to remove "nmap-ncat"
  lifecycleStages:
  - BUILD
  - DEPLOY
  policySections:
  - sectionName: Rule 1
    policyGroups:
    - fieldName: Image Component
      booleanOperator: OR
      values:
      - value: nmap-ncat=
  rationale: Netcat potentially allows attackers to move laterally, and access external
    services from a running pod
  severity: HIGH_SEVERITY
